src/objects/EventApi__Speaker__c.object
<CustomObject>
    <fields>
        <fullName>Disable_Todo__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Disable Todo</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Guide__c</fullName>
        <formula>EventApi__Event__r.Guide__c</formula>
        <label>Guide ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Import_Id__c</fullName>
        <label>Import ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Speaker_Id__c</fullName>
        <externalId>true</externalId>
        <label>Speaker ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Allow_Rating__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Allow Rating</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>